# ThermoElastic

./: CMakeCache.txt  CMakeLists.txt  Initial_values.cpp  Makefile  ThermoElastic.cpp  ThermoElastic.h  assemble_system.cpp  cmake_install.cmake  main.cpp  output_results.cpp  run.cpp  setup_system.cpp  solution-000.vtk  solve.cpp
results/: solution-002.vtk  solution-003.vtk  solution-004.vtk  solution-005.vtk  solution-006.vtk  solution-007.vtk  solution-008.vtk  solution-009.vtk  solution-010.vtk
results/trial1/: solution-000.vtk  solution-001.vtk  solution-002.vtk  solution-003.vtk  solution-004.vtk  solution-005.vtk  solution-006.vtk  solution-007.vtk  solution-008.vtk  solution-009.vtk  solution-010.vtk
results/trial2/: solution-000.vtk  solution-001.vtk  solution-002.vtk  solution-003.vtk  solution-004.vtk  solution-005.vtk  solution-006.vtk  solution-007.vtk  solution-008.vtk  solution-009.vtk  solution-010.vtk  solution-011.vtk  solution-012.vtk  solution-013.vtk  solution-014.vtk  solution-015.vtk  solution-016.vtk  solution-017.vtk  solution-018.vtk  solution-019.vtk  solution-020.vtk  solution-021.vtk  solution-022.vtk  solution-023.vtk  solution-024.vtk  solution-025.vtk  solution-026.vtk  solution-027.vtk  solution-028.vtk  solution-029.vtk  solution-030.vtk  solution-031.vtk  solution-032.vtk  solution-033.vtk  solution-034.vtk  solution-035.vtk  solution-036.vtk  solution-037.vtk  solution-038.vtk  solution-039.vtk  (+61 more)
